--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,6 @@
-@import-normalize;
+@import "./styles/settings/normalize.css";
+@import "./styles/variables.css";
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
-
-* {
-    box-sizing: border-box;
-}
-
-:root {
-    /* Typography */
-    --family: 'Nunito Sans', sans-serif;
-    --fs-sm: 14px;
-    --fs-md: 16px;
-    --fw-light: 300;
-    --fw-normal: 600;
-    --fw-bold: 800;
-
-    /* Other */
-    --radii: 0.5rem;
-}
 
 body[data-theme='dark'] {
     --colors-text: hsl(0, 0%, 100%);
